# krusch_agentic_proxy

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  benchmark.sh  config.example.json  pyproject.toml  start_proxies.sh  stop_proxies.sh
benchmarks/: run_distributed_humaneval.py  run_distributed_ifeval.py  run_humaneval.py  run_humaneval_14b_tier.py  run_humaneval_9b_tier.py  run_humaneval_gemma4_tier.py  run_weklund_all_models.py  weklund_tools.py
benchmarks/mtb/: __init__.py  attention_mask.py  dtypes.py  file_io.py  hf_utils.py  lmstudio_utils.py  ollama_utils.py  prompts.py  select_benchmarks.py
benchmarks/mtb/layer_benchmarks/: __init__.py  base_layer_benchmark.py  run_layer_benchmark.py
benchmarks/mtb/layer_benchmarks/layers/: layer_norm.py  linear.py  mhsa.py  scaled_dot_product_attention.py  softmax.py  transformer_decoder_layer.py  transformer_encoder_layer.py
benchmarks/mtb/llm_benchmarks/: __init__.py  hivemind_llm_benchmark.py  lmstudio_llm_benchmark.py  mlx_llm_benchmark.py  run_llm_benchmark.py
benchmarks/mtb/llm_benchmarks/models/: hivemind_swarm.py  qwen.py
benchmarks/mtb/quality_benchmarks/: sandbox.py
benchmarks/mtb/system/: hardware_info.py  memory.py  software_info.py
benchmarks/mtb/visualization/: create_index.py  plot_layer_benchmark_result.py  show_measurements.py  symbol_and_color.py
benchmarks/results/ifeval_dual_llama3.1_8b/llama3.1__8b/: results_2026-04-19T18-54-35.409096.json
docs/: openclaw_integration.md
src/: api_gateway.py  client.py  core.py  mcp_server.py  models.py  router.py  tools.py
(+1 files in other folders)
