[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krusch-agentic-proxy"
version = "0.2.0"
description = "A Dual-Engine MCP Server for flawless 7B local model tool calling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "KruschDev", email = "krusch@example.com" }
]
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
krusch-agentic-mcp = "src.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
